# docs/swagger.json
@@ -1231,7 +1231,10 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Logout user dari sistem. Frontend bertanggung jawab untuk menghapus token Paseto dari localStorage atau cookie.",
+                "description": "Melakukan logout user dengan menginformasikan client untuk menghapus token",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -1241,15 +1244,25 @@
                 "summary": "Logout User",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Logout berhasil",
                         "schema": {
-                            "$ref": "#/definitions/models.LogoutSuccessResponse"
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string"
+                                }
+                            }
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "Tidak terautentikasi",
                         "schema": {
-                            "$ref": "#/definitions/models.UnauthorizedErrorResponse"
+                            "type": "object",
+                            "properties": {
+                                "error": {
+                                    "type": "string"
+                                }
+                            }
                         }
                     }
                 }
@@ -2937,15 +2950,6 @@
                 }
             }
         },
-        "models.LogoutSuccessResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string",
-                    "example": "Logout berhasil. Silakan hapus token dari sisi client."
-                }
-            }
-        },
         "models.QRCodeScanPayload": {
             "type": "object",
             "required": [
@@ -2958,15 +2962,6 @@
                 },
                 "user_id": {
                     "type": "string"
-                }
-            }
-        },
-        "models.UnauthorizedErrorResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "Token tidak valid atau tidak ada"
                 }
             }
         },
